--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
@@ -1000,3 +1000,11 @@ hr.white-line{
     }
   }
 }
+
+.toggle2 {
+  background-color: #f03f37 !important;
+  color: #FFF !important;
+  box-shadow: 0 0 10px #f03f3799 !important;
+  border-color: #f03f37 !important;
+  z-index: 1 !important;
+}
