--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
@@ -63,15 +63,16 @@
         <div class="col-lg-12 pt-3">
           <div class="d-flex justify-content-center align-items-start">
             <div class="">
-              <div class="toggle webtoggle second">
+                <div class="toggle webtoggle second">
 
-                <input  type="radio" name="sizeBy" value="weight" id="sizeWeight"  [checked]="selectedservicetype == 'Pickup'|| selectedservicetype == undefined " (click)="selectService('Pickup')" />
-                <label for="sizeWeight">Pickup  </label>
-                <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions" [checked]="selectedservicetype == 'Delivery'" (click)="selectService('Delivery')"  />
-                <label for="sizeDimensions">Delivery</label>
-                  <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions1" [checked]="selectedservicetype == 'Curbside'" (click)="selectService('Curbside')"  />
-                  <label for="sizeDimensions1">Curbside</label>
-              </div>
+                    <input  type="radio" name="sizeBy" value="weight" id="sizeWeight"   [checked]="selectedservicetype == 'Pickup'|| selectedservicetype == undefined " (click)="selectService('Pickup')" />
+                    <label for="sizeWeight" [ngClass]="selectedservicetype == 'Pickup'? 'toggle2': ''">Pickup   </label>
+
+                    <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions" [checked]="selectedservicetype == 'Delivery'" (click)="selectService('Delivery')"  />
+                    <label for="sizeDimensions" [ngClass]="selectedservicetype == 'Delivery'? 'toggle2': ''">Delivery</label>
+                    <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions1" [checked]="selectedservicetype == 'Curbside'" (click)="selectService('Curbside')"  />
+                    <label for="sizeDimensions1"  [ngClass]="selectedservicetype == 'Curbside'? 'toggle2': ''">Curbside</label>
+                </div>
             </div>
             
           </div>
@@ -84,10 +85,10 @@
           <div class="categories">
             <div class="swiper-wrapper">
               <div class="swiper-slide" *ngFor="let val of FoodTypes;let i=index;">
-                <div class="slide-item p-3 rounded-lg " [id]="'foodtype' + val.FoodTypeId"  >
+                <div class="slide-item p-3 rounded-lg " [id]="'foodtype' + val.FoodTypeId" style="cursor: pointer"  (click)="FoodTypeF(val.FoodTypeId, val.FoodTypeId); searchrRestaurantsBoth(servicetype)">
                   <div class="item-img">
                     <figure>
-                     <a (click)="FoodTypeF(val.FoodTypeId, val.FoodTypeId); searchrRestaurantsBoth(servicetype)"> <img id="{{val.FoodTypeId}}w"   style="cursor: pointer" [src]="val.FoodTypeImg"> </a>
+                     <a > <img id="{{val.FoodTypeId}}w"   style="cursor: pointer" [src]="val.FoodTypeImg"> </a>
                     </figure>
                   </div>
                     <div class="text-center">{{val.Name}}</div>
